# emre-config

./: .gitignore  JUSTFILE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
emre_config/: ConfigGenerator.py  cli.py  generator.py  parameters.py  run_job_flow_request.py  structures.py
tests/: example_input_aws_config.json  example_resulting_runner_config.json  test_cli.py  test_generator.py  test_integration_with_emr.py
