
[tool.poetry]
name = "emre-config"
version = "1.0.0"
description = ""
authors = [ "Felix Borchers <h1f1x@users.noreply.github.com>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "7.4.3"
boto3 = "*"
pytest-env = "^1.1.3"
pytest-integration = "^0.2.3"
ruff = "^0.4.5"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
emre-config = "emre_config.cli:cli"

[tool.pytest_env]
RUN_ENV = 1
AWS_DEFAULT_REGION = {value = "eu-central-1", skip_if_set = true}

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
